@@ -35,6 +35,8 @@ Local modifications:
   - Updated WebP with head change#I9e5ae737
 - Sync-patch with libwebp ver 0.3.1 (head change#Idea3464b).
   - Add incremental decoding support for images containing ALPH and ICCP chunks.
+- Updated WebP with patches required for Animation
+   (#I737451d7f, #Ia300385a & #I9566a8e2).
 
 The Android.mk file creates WebP Decoder and Encoder static libraries which
 can be added to any application by Adding to LOCAL_STATIC_LIBRARIES
